--- a/latex/keccak ppt/main.tex
+++ b/latex/keccak ppt/main.tex
@@ -160,40 +160,43 @@
 \begin{frame}
 	\frametitle{Hash Function}
 	\begin{itemize}
-		\item $H:\{0,1\}^* \rightarrow \{0,1\}^n $
+		\item A hash function is of the form $H:\{0,1\}^* \rightarrow \{0,1\}^n $.
 		\pause
-		\item A Deterministic	function
-		\item Takes as input a arbitrary size string and outputs a fixed size ($n$) string
+		\item It is a deterministic	function.
+		\item It takes as input an arbitrary size string and outputs a fixed size ($n$) string.
 		\pause
-		\item Used in cryptographic applications such as Authentication, Digital Signatures and Integrity etc..
+		\item It is used in cryptographic applications such as Authentication, Digital Signatures and Integrity etc..
 	\end{itemize}
 \end{frame}
 
 \begin{frame}
 	\frametitle{Cryptographic Hash Functions}
 	\begin{itemize}
-		\item Cryptographic applications require Hash functions to satisfy the following conditions\\
+		\item Cryptographic applications require Hash functions to satisfy the following conditions:\\
 		\begin{itemize}\setlength\itemindent{10pt}
 			\pause
-			\item {\bf Efficiency}: Given $m$, it is easy to compute $H(m)$\\
+			\item {\bf Efficiency}: Given a message $m$, it is easy to compute its Hash i.e. $H(m)$.\\
+			\medskip
 			\pause
-			\item {\bf Preimage Resistance}: Given $H(m)$, it is computationally hard to find $m$\\
+			\item {\bf Preimage Resistance}: Given $H(m)$, it is computationally hard to find the message $m$.\\
+			\medskip
 			\pause
-			\item {\bf Second-preimage Resistance}: Given $m$, it is computationally hard to find $m^\prime$ such that $H(m)=H(m^\prime)$\\
+			\item {\bf Second-preimage Resistance}: Given a message $m$, it is computationally hard to find another message $m^\prime$ such that $H(m)=H(m^\prime)$.\\
+			\medskip
 			\pause
-			\item {\bf Collision Resistance}: It is computationally hard to find $m$ and $m^\prime$ such that $H(m)=H(m^\prime)$\\
+			\item {\bf Collision Resistance}: It is computationally hard to find two messages $m$ and $m^\prime$ such that $H(m)=H(m^\prime)$.\\
 		\end{itemize}
 		\pause
-		\item Hash functions having the above properties are referred to as cryptographic hash functions 
+		\item Hash functions having the above properties are referred to as cryptographic hash functions.
 	\end{itemize}
 \end{frame}
 
 \begin{frame}
 	\frametitle{Need For \SHA-$3$}
 	\begin{itemize}
-		\item MD$5$, \SHA-$1$, \SHA-$2$ are very popular hash functions and are widely used
+		\item MD$5$, \SHA-$1$, \SHA-$2$ are very popular hash functions and are widely used.
 		\pause
-		\item In year 2005, First practical collision attacks on
+		\item In year 2005, First practical collision attacks were found on:
 		\begin{itemize}
 			\item MD$5$, \SHA-$0$ and \SHA-$1$ by Xiaoyun Wang \etal
 		\end{itemize}
@@ -201,22 +204,25 @@
 %		\item In the year $2005$, the first practical collision attack on MD$5$ was published by Xiaoyun Wang \etal
 %		\item in the same year, a practical collision attack on \SHA-$0$ and \SHA-$1$ was published by Xiaoyun Wang \etal
 		\pause
-		\item NIST was worried about the security of hash functions
+		\item National Institute of Standards and Technology (NIST) was worried about the security of hash functions.
 		
-		\item Though by that time \SHA-$2$ family of hash functions was standardized
+		\item Though by that time \SHA-$2$ family of hash functions was standardized.
 		\pause
-		\item But as \SHA-$2$ was also based on Merkle-Damgard construction like \SHA-$0$, \SHA-$1$
-		\item There was a possibility that it could also be attacked in a similar fashion
+		\item \SHA-$2$ was also based on Merkle-Damgard construction like \SHA-$0$, \SHA-$1$.
+		\item There was a possibility that it could also be attacked in a similar fashion.
 	\end{itemize}
 \end{frame}
 
 \begin{frame}
-	\frametitle{\KECCAK{}}
+	\frametitle{\SHA-$3$ Competition}
 	\begin{itemize}
-		\item With this thought, in the year $2006$ NIST decided to hold a competition for the next secure hash function
-		\item In $2008$, NIST announced a competition for the Secure Hash Algorithm-$3$ (\SHA-$3$)
-		\item  In the year $2012$, NIST announced \KECCAK{} as the winner of the competition among the five finalists viz. BLAKE, Gr\o stl, JH, \KECCAK{} and Skein
-		\item Since $2015$, \KECCAK{} has been standardized as \SHA-$3$ by NIST
+		\item With this thought, in the year $2006$ NIST decided to hold a competition for the next secure hash function.
+		\pause
+		\item In $2008$, NIST announced a competition for the Secure Hash Algorithm-$3$ (\SHA-$3$).
+		\pause
+		\item  In the year $2012$, NIST announced \KECCAK{} as the winner of the competition among the five finalists viz. BLAKE, Gr\o stl, JH, \KECCAK{} and Skein.
+		\pause
+		\item Since $2015$, \KECCAK{} has been standardized as \SHA-$3$ by NIST.
 		
 	\end{itemize}
 \end{frame}
@@ -224,48 +230,55 @@
 \begin{frame}
 	\frametitle{\KECCAK{}}
 	\begin{itemize}
-		\item \KECCAK{} hash function is based on sponge construction
-		\item \SHA-$3$ family of hash functions is based on \Keccak{}
-		\item The \SHA-$3$ family provides four hash functions: \SHA3-$224$, \SHA3-$256$, \SHA3-$384$ and \SHA3-$512$
-		\item \Keccak{}'s excellent resistance towards crypt-analytic attacks is one of the main reasons for its selection by NIST
-		\item The algorithm is a good mixture of linear as well as non-linear operations
+		\item \KECCAK{} hash function is based on sponge construction.
+		\item \SHA-$3$ family of hash functions is based on \Keccak{}.
+		\item The \SHA-$3$ family provides four hash functions:
+			\begin{itemize}
+				\item \SHA3-$224$, \SHA3-$256$, \SHA3-$384$ and \SHA3-$512$.
+			\end{itemize}
+		\pause
+		\item \Keccak{}'s excellent resistance towards crypt-analytic attacks is one of the main reasons for its selection by NIST.
+		\item The algorithm is a good mixture of linear as well as non-linear operations.
 	\end{itemize}
 \end{frame}
 
 \begin{frame}
 	\frametitle{Sponge Construction}
 	\begin{itemize}
-		\item A sponge construction consists of
+		\item A sponge construction consists of:
 			\begin{itemize}
-				\item A permutation function $f$
-				\item a parameter ``rate'' $r$
-				\item a padding rule pad
-				\item This construction produces a sponge function that takes as input a bit string $M$ and generates a string of length $l$
+				\item Permutation function $f$,
+				\item Parameter ``rate'' $r$, and
+				\item Padding rule pad.
+				\pause
+				\item This construction produces a sponge function that takes as input a bit string $M$ and generates a string of length $l$.
 			\end{itemize}
 	\end{itemize}
 	\begin{figure}
 	\resizebox{250pt}{!}{
 		\includegraphics[scale=0.5]{sponge.png}
 	}
-	\caption{The sponge construction\label{sponge}}
+	\caption{\textcolor{blue}{The sponge construction}\label{sponge}}
 \end{figure}
 \end{frame}
 
 \begin{frame}
 	\begin{itemize}
 		\frametitle{\KECCAK{}-$p$ Permutation}
-		\item The function $f$ in the sponge construction is denoted by \KECCAK-$f\left[b\right]$
-		\item $b$ is the length of input string
-		\item Internally, \KECCAK-$f\left[b\right]$ consists of a round function $p$ which is applied $n_r$ number of times
-		\item \KECCAK-$f\left[b\right]$ function is specialization of \KECCAK-$p\left[b, n_r\right]$
+		\item The function $f$ in the sponge construction is denoted by \KECCAK-$f\left[b\right]$.
+		\item $b$ is the length of input string.
+		\item Internally, \KECCAK-$f\left[b\right]$ consists of a round function $p$ which is applied $n_r$ number of times.
+		\item \KECCAK-$f\left[b\right]$ function is specialization of \KECCAK-$p\left[b, n_r\right]$.
 	\end{itemize}
 \end{frame}
 		
 \begin{frame}
-	\frametitle{State}
+	\frametitle{\KECCAK{} State}
 	\begin{itemize}
-		\item The state input to \KECCAK-$f\left[b\right]$ consists of $b$ bits, the state is divided into slices
-		\item Size of a slice is fixed i.e., $25$ bits
+		\item The state input to \KECCAK-$f\left[b\right]$ consists of $b$ bits.
+		\item The state is divided into slices.
+		\item Each slice is of fixed size i.e., $25$ bits.
+		\item A state $S$, which is a $b$-bit string, in \Keccak{} is usually denoted by a $3$-dimensional grid of size $(5 \times 5 \times w)$.
 		\begin{figure}
 			\begin{tikzpicture}[on grid,scale=0.3]
 				\shade[yslant=-0.5,right color=gray!10, left color=black!40] (0,2) rectangle +(5,1) node[xshift=-1.2cm, yshift=0.2cm] at (0,2){ a row($5$-bits)};
@@ -295,34 +308,37 @@
 				
 				\draw[yslant=0.5,xslant=-1] (5,0) grid (13,5);
 				\end{tikzpicture}
-			\caption{The \KECCAK{} State \label{ss}}
+			\caption{\textcolor{blue}{The \KECCAK{} State}}
 		\end{figure}
 	\end{itemize}
 \end{frame}
 
 \begin{frame}
-	\frametitle{Round Function}
+	\frametitle{Round Function of \KECCAK{}-$p$}
 	\begin{itemize}
-		\item The round function $p$ in \Keccak{} comprises of $5$ steps
-		\item In each of which the state undergoes transformations specified by the step mapping
-		\item These step mappings are called $\theta,\;\rho,\;\pi,\;\chi\;and\;\iota$
-		\item These transformations are applied in sequence
-		\item A state $S$, which is a $b$-bit string, in \Keccak{} is usually denoted by a $3$-dimensional grid of size $(5 \times 5 \times w)$
-		\item Now, we will describe these $5$ step mappings in detail
+		\item The round function $p$ in \Keccak{} comprises of $5$ step mappings.
+		\item The \Keccak{} state undergoes some transformations specified by the step mapping.
+		\item These step mappings are called $\theta,\;\rho,\;\pi,\;\chi\;and\;\iota$.
+		\item These transformations are applied in sequence.
+		
+		\item Now, we will describe these $5$ step mappings in detail.
 	\end{itemize}
 \end{frame}
 
 \begin{frame}
-	\frametitle{$\theta$ Step mapping}
+	\frametitle{$\theta$ step mapping}
 	\begin{itemize}
-		\item XORs each bit in the state with the parities of two neighboring columns
-		\item For bit position $\left(x,\; y,\; z\right)$, one column is $\left(\left(x - 1\right) \bmod 5,\; z\right) $ and the other is $\left(\left(x+1\right)\bmod 5,\; \left(z - 1\right) \bmod w\right)$
+		\item XORs each bit in the state with the parities of two neighboring columns.
+		\pause
+		\item For bit position $\left(x,\; y,\; z\right)$, one column is $\left(\left(x - 1\right) \bmod 5,\; z\right) $ and the other is $\left(\left(x+1\right)\bmod 5,\; \left(z - 1\right) \bmod w\right)$.
+		\pause
 		\item If we have $A$ as the input state to $\theta$ then the output state $B$ is:
 		\begin{align}\nonumber
 		B\left[x,\; y,\; z\right] &= A\left[x,\; y,\; z\right] \bigoplus P\left[(x - 1) \bmod 5 ,\, z \right] \\
 		&\hspace{1.3cm}\bigoplus P\left[ (x + 1) \bmod 5 ,\, (z - 1) \bmod w \right]
 		\end{align}
-		\item $P\left[x,\; z\right]$ represents the parity of the column $(x,\; z)$
+		\pause
+		\item $P\left[x,\; z\right]$ represents the parity of the column $(x,\; z)$.
 		\[
 		P\left[x,\; z\right]  = \bigoplus_{y = 0}^{4} A\left[x,\; y,\; z\right]
 		\]
@@ -330,66 +346,86 @@
 \end{frame}
 
 \begin{frame}
-	\frametitle{$\rho$ Step mapping}
+	\frametitle{$\rho$ step mapping}
 	\begin{itemize}
-		\item $\rho$ ({\bf rho}): This step rotates each lane by a constant value towards the MSB
-		\item $B\left[x, \,y,\, z\right] = A\left[x, \,y, \,z + \rho\left(x, y\right) \bmod w\; \right]$
-		\item $\rho\left(x,\; y\right)$ is the constant for lane $\left(x,\; y\right)$
-		\item The constant value $\rho\left(x,\; y\right)$ is specified for each lane in the construction of \Keccak{}
-		\item $\rho$ is also a linear step mapping 
+		\item $\rho$ ({\bf rho}): This step rotates each lane by a constant value towards the MSB.
+		\pause
+		\item If we have $A$ as the input state to $\rho$ then the output state $B$ is:
+		\begin{itemize}
+			\item $B\left[x, \,y,\, z\right] = A\left[x, \,y, \,z + \rho\left(x, y\right) \bmod w\; \right]$
+		\end{itemize}
+		\pause
+		\item $\rho\left(x,\; y\right)$ is the constant for lane $\left(x,\; y\right)$.
+		\item The constant value $\rho\left(x,\; y\right)$ is specified for each lane in the construction of \Keccak{}.
+		\pause
+		\item $\rho$ is a linear step mapping.
 	\end{itemize}
 \end{frame}
 
 \begin{frame}
-	\frametitle{$\pi$ Step mapping}
+	\frametitle{$\pi$ step mapping}
 	\begin{itemize}
-		\item $\pi$ ({\bf pi}): It permutes the positions of lanes
+		\item $\pi$ ({\bf pi}): It permutes the position of lanes.
 		\item The new position of a lane is determined by a matrix, 
 		\begin{align}
 		\begin{bmatrix} x'\\ y'\end{bmatrix} = 
 		\begin{bmatrix} $0$ & $1$ \\ $2$ &  $3$ \end{bmatrix} \cdot \begin{bmatrix} x\\ y\end{bmatrix},
 		\end{align}
-		where $\left(x',\; y'\right)$ is the position of lane $\left(x,\; y\right)$ after $\pi$ step
-		\item $\pi$ is also a linear step mapping
+		where $\left(x',\; y'\right)$ is the position of lane $\left(x,\; y\right)$ after $\pi$ step.
+		\item $\pi$ is a linear step mapping.
 	\end{itemize}
 \end{frame}
 
 \begin{frame}
-	\frametitle{$\chi$ Step mapping}
+	\frametitle{$\chi$ step mapping}
 	\begin{itemize}
-		\item $\chi$ ({\bf chi}): Each bit in the original state is XOR-ed with a non-linear function of next two bits in the same row
+		\item $\chi$ ({\bf chi}): Each bit in the original state is XOR-ed with a non-linear function of next two bits in the same row.
 		
 		\begin{align}\nonumber
 		B[x,\; y,\; z] &=  A[x,\; y,\; z] \;\oplus \\
 		& \hspace{0.5cm} \left( \left(A[ (x + 1 )\bmod 5,\; y,\; z] \oplus 1\right) \cdot  A[ (x + 2) \bmod 5,\; y,\; z] ) \right).
 		\end{align}
-		
-		\item $\chi$ is the only non-linear operation among the $5$ step mappings in \KECCAK{}
+		\pause
+		\item $\chi$ is the only non-linear operation among the $5$ step mappings in \KECCAK{}.
 	\end{itemize}
 \end{frame}
 
 \begin{frame}
-	\frametitle{$\iota$ Step mapping}
+	\frametitle{$\iota$ step mapping}
 	\begin{itemize}
-	    \item $\iota$ ({\bf iota}): This step mapping only modifies the $(0,\;0)$ lane depending on the round number i.e., 
+	    \item $\iota$ ({\bf iota}): This step mapping only modifies the $(0,\;0)$ lane depending on the round number.
+	    
+	    \item If we have $A$ as the input state to $\iota$ then the output state $B$ is:
 		\begin{align}
-		B[0,\; 0] = A[0,\; 0] \oplus RC_i,
+			B[0,\; 0] = A[0,\; 0] \oplus RC_i,
 		\end{align}
-		where $RC_i$ is round constant that depends on the round number. The remaining $24$ lanes remain unaffected.	
-		\item All the rounds are identical but the symmetry is destroyed by this step due to the addition of a round constant to a particular lane
+		where $RC_i$ is round constant that depends on the round number.
+		\pause
+		\item The remaining $24$ lanes remain unaffected.	
+		\pause
+		\item All the rounds are identical but the symmetry is destroyed by this step due to the addition of a round constant to a particular lane.
 	\end{itemize}
 \end{frame}
 
 \begin{frame}
 	\frametitle{Specification of \KECCAK-$p\left[ b, n_r \right]$}
 	\begin{itemize}
-		\item Round in \Keccak{} is given by ${\tt Round}\left(A,\; i_r\right) = \iota\left( \chi\left( \pi \left( \rho \left( \theta \left( A \right) \right) \right) \right),\; i_r\right)$
-		\item Consists of $n_r$ number of rounds
+		\item Round in \Keccak{} is given by:
+		\medskip
+		\begin{itemize}
+			\item ${\tt Round}\left(A,\; i_r\right) = \iota\left( \chi\left( \pi \left( \rho \left( \theta \left( A \right) \right) \right) \right),\; i_r\right)$
+		\end{itemize}
+		\medskip
+		\item It consists of $n_r$ number of iterations of ${\tt Round}\left(A,\; i_r\right)$.
+		\medskip
 		\item \KECCAK-$p\left[ b,\;n_r \right] \left( S \right)$
 			\begin{itemize}
 				\item Convert $S$ into a state array $A$
+				\medskip
 				\item For $i_r$ from $0$ to $n_r - 1$, let $A = {\tt Round}\left(A,\; i_r\right)$
+				\medskip
 				\item Convert $A$ into string $S'$ of length $b$
+				\medskip
 				\item Return $S'$
 			\end{itemize}
 	\end{itemize}
